views created to add allowed users

--- a/views/admin/index.erb
+++ b/views/admin/index.erb
@@ -3,6 +3,7 @@
   <ul>
     <li><a href="/admin/users">Manage users</a></li>
     <li><a href="/admin/repos">Manage repositories</a></li>
+    <li><a href="/admin/allowed">Allowed users</a></li>
   </ul>
 </div>
 
