--- a/public/css/admin.scss
+++ b/public/css/admin.scss
@@ -2,8 +2,40 @@
 
 #failedEmails { width: 100%; }
 
+.text_field {
+  height:30px;
+  width:286px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  border-color:#cccccc;
+  padding:0 10px;
+}
+
 #manageUsers, #repos {
   div.trash {
+    margin-top: 3px;
+    margin-bottom: -3px;
+    display: inline-block;
+    width: 20px;
+    height: 25px;
+    cursor: pointer;
+    background: url(/assets/images/trash.png) no-repeat;
+    opacity: 0.3;
+    &:hover { opacity: 1.0; }
+  }
+
+  table {
+    td:last-child { text-align: center; }
+  }
+}
+
+
+#manageUsers, #repos {
+  div.trash_allow_user {
     margin-top: 3px;
     margin-bottom: -3px;
     display: inline-block;
