--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -15,6 +15,17 @@ body {
   background-image: url(/assets/images/background.png);
 }
 
+.message_denied{
+  position: absolute;
+  width: 100%;
+  max-height: 100%;
+  padding: 10em;
+  background-color: white;
+  font-family: $sansFont;
+  color: $textColor;
+  background-image: url(/assets/images/background.png);
+}
+
 * {
   margin: 0;
   padding: 0;
